tests/fixtures/invalid/return-7.py
def f():  # Check 3
    v = 1
    # Lorem ipsum dolor sit amet
    return 1

def f():  # Check 4
    v = 1
    """
    Lorem ipsum dolor sit amet
    """
    return 1

def f():  # Check 5
    a = """
    Multiline string assignment
    """
    return 1

def f():  # Check 6
    v = 1
    return 1

def f():  # Check 7
    return 1
    return 1

def f():  # Check 8
    print(1)
    return 1

def f():  # Check 9
    return 1
    print(1)
